[package]
name = "aonsoku-native-audio-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rubato = "0.16"
cpal = "0.15"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
url = "2.5"
rustfft = "6.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
