[package]
name = "aonsoku-spotify-connect-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
librespot = { path = "../third_party/librespot-0.8.0", default-features = false, optional = true }

[features]
default = []
with-librespot = ["dep:librespot"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
